Fix test that broke with changed superuser resolution behaviour